<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>io.github.atlascommunity</groupId>
        <artifactId>parent</artifactId>
        <version>3.3.11</version>
    </parent>

    <groupId>ru.mail.jira.plugins</groupId>
    <artifactId>myteam</artifactId>
    <version>${revision}</version>
    <organization>
        <name>VK</name>
        <url>https://vk.company</url>
    </organization>
    <name>VK Plugin: Myteam bot Notifications</name>
    <description>Send notifications on issue changes and work with issues using Myteam instant messenger</description>
    <packaging>atlassian-plugin</packaging>
    <modelVersion>4.0.0</modelVersion>

    <dependencies>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.jeasy</groupId>
            <artifactId>easy-rules-core</artifactId>
            <version>4.1.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.atlassian.jira.plugins</groupId>
            <artifactId>jira-greenhopper-api</artifactId>
            <version>${jira.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>
</project>
